hw13-di refactoring